fix: update script filename for Copilot usage tracking in Raycast

--- a/content/blogs/copilot-usage-raycast.mdx
+++ b/content/blogs/copilot-usage-raycast.mdx
@@ -53,9 +53,9 @@ I needed a fast, low-friction way to sanity-check my usage without opening brows
 
 ## Implementation
 
-The script is available on GitHub. Save it as `~/.config/raycast/scripts/copilot-usage.sh`.
+The script is available on GitHub. Save it as `~/.config/raycast/scripts/copilot-month-%-check.sh`.
 
-If you want to share/fork it, it's in this repo: https://github.com/bradystroud/raycast-scripts/blob/main/copilot-usage.sh
+If you want to share/fork it, it's in this repo: https://github.com/bradystroud/raycast-scripts/blob/main/copilot-month-%25-check.sh
 
 ## UX Flow
 
