chore: clean up empty code change sections in the changes log

--- a/content/blogs/n8n-ai-content-generator.mdx
+++ b/content/blogs/n8n-ai-content-generator.mdx
@@ -1,6 +1,6 @@
 ---
 canonicalUrl: "https://bradystroud.dev/blogs/n8n-ai-content-generator"
-title: I Built an n8n Content Flywheel That Writes My Next Blog Ideas and Social Posts
+title: n8n Workflow - Generating Blog Ideas and Social Posts
 description: A practical n8n automation that researches topics, analyzes recent blogs, generates new post ideas, drafts social content, and emails everything in one clean digest.
 date: 2026-02-23T12:30:00.000Z
 coverImage: /uploads/n8n-ai-content-generator/workflow.png
